fix styling: better contrast for text when hovering on summary

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -94,6 +94,7 @@ summary
 
 summary:hover
   background: $highlight
+  color: $bg
 
 .contents
   margin-top: 0.5em
